.provarCaches/00D5f000005vwGkEAI/objects/rstk__confcompvar__c.object
<CustomObject>
    <description>confcompvar__c</description>
    <fields>
        <fullName>rstk__confcompvar_booleansel__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Boolean for Selection Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__confcompvar_confcomp__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Configuration Component</label>
        <referenceTo>rstk__confcomp__c</referenceTo>
        <relationshipLabel>Configuration Component Formula Variable</relationshipLabel>
        <relationshipName>confcompvars</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__confcompvar_defaultval__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Default Value</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__confcompvar_source__c</fullName>
        <label>Source Value Entity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Selection</fullName>
                    <default>true</default>
                    <label>Selection</label>
                </value>
                <value>
                    <fullName>Selection Component</fullName>
                </value>
                <value>
                    <fullName>Selection Component Cost</fullName>
                </value>
                <value>
                    <fullName>Selection Component Specified Price</fullName>
                </value>
                <value>
                    <fullName>Selection Component Product Price</fullName>
                </value>
                <value>
                    <fullName>Selection Component Selected Price</fullName>
                </value>
                <value>
                    <fullName>Order Line Quantity</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__confcompvar_sourcecomp__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Source Component</label>
        <referenceTo>rstk__confcomp__c</referenceTo>
        <relationshipLabel>Configuration Component Formula Variable (Source Component)</relationshipLabel>
        <relationshipName>confcompvars_sourcecomp</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__confcompvar_sourcegroup__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Source Group</label>
        <referenceTo>rstk__confgroup__c</referenceTo>
        <relationshipLabel>Configuration Component Formula Variable</relationshipLabel>
        <relationshipName>confcompvars</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__confcompvar_sourcesel__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Source Selection</label>
        <referenceTo>rstk__confsel__c</referenceTo>
        <relationshipLabel>Configuration Component Formula Variable</relationshipLabel>
        <relationshipName>confcompvars</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__confcompvar_variable__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Variable</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__confcompvar_confcomp__r.rstk__externalid__c &amp; rstk__confcompvar_variable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__confcompvar_variable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Configuration Component Formula Variable</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuration Component Formula Variable</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__Boolean_must_be_Selection</fullName>
        <active>true</active>
        <errorConditionFormula>rstk__confcompvar_booleansel__c == true &amp;&amp; !ISPICKVAL( rstk__confcompvar_source__c , &apos;Selection&apos;)</errorConditionFormula>
        <errorMessage>Boolean for Selection Value cannot be set unless Source Value Entity is Selection</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Default_Value</fullName>
        <active>true</active>
        <description>Default Value should be greater than or equal to zero.</description>
        <errorConditionFormula>rstk__confcompvar_defaultval__c != null &amp;&amp;  rstk__confcompvar_defaultval__c &lt; 0</errorConditionFormula>
        <errorMessage>Default Value should be greater than or equal to zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Formula_Variable</fullName>
        <active>true</active>
        <description>Formula Variable is Required and not modifiable , must be two upper case letters (A thru Z).</description>
        <errorConditionFormula>ISBLANK( rstk__confcompvar_variable__c ) || 
 ( NOT( ISNEW() ) &amp;&amp;  ISCHANGED(rstk__confcompvar_variable__c) ) ||
 NOT(REGEX(rstk__confcompvar_variable__c, &apos;[A-Z][A-Z]&apos;) )</errorConditionFormula>
        <errorMessage>Formula Variable is Required and not modifiable , must be two upper case letters (A thru Z).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Reserved_Words</fullName>
        <active>true</active>
        <description>Reserved words &apos;IF&apos; and &apos;OR&apos; cannot be used as a Formula Variable</description>
        <errorConditionFormula>rstk__confcompvar_variable__c = &apos;OR&apos; || rstk__confcompvar_variable__c = &apos;IF&apos;</errorConditionFormula>
        <errorMessage>Reserved words &apos;IF&apos; and &apos;OR&apos; cannot be used as a Formula Variable</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Source_Component</fullName>
        <active>true</active>
        <description>Source Component is Required if Source Value Entity is Selection Component and it should belong Source Selection</description>
        <errorConditionFormula>(ISBLANK(  rstk__confcompvar_sourcecomp__c  ) &amp;&amp;  ISPICKVAL( rstk__confcompvar_source__c , &apos;Selection Component&apos;)) || ( ISPICKVAL( rstk__confcompvar_source__c , &apos;Selection Component&apos;) &amp;&amp; rstk__confcompvar_sourcecomp__r.rstk__confcomp_confsel__c &lt;&gt;  rstk__confcompvar_sourcesel__c)</errorConditionFormula>
        <errorMessage>Source Component is Required if Source Value Entity is Selection Component and it should belong Source Selection</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Source_Component2</fullName>
        <active>true</active>
        <description>Source Component cannot be the same as the Configuration Component</description>
        <errorConditionFormula>!ISBLANK( rstk__confcompvar_confcomp__c ) &amp;&amp; ! ISBLANK( rstk__confcompvar_sourcecomp__c ) &amp;&amp; rstk__confcompvar_confcomp__c = rstk__confcompvar_sourcecomp__c &amp;&amp; !ISPICKVAL( rstk__confcompvar_source__c , &apos;Selection Component Product Price&apos;) &amp;&amp; !ISPICKVAL( rstk__confcompvar_source__c , &apos;Selection Component Specified Price&apos;)</errorConditionFormula>
        <errorMessage>Source Component cannot be the same as the Configuration Component</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Source_Group</fullName>
        <active>true</active>
        <description>Source Group is Required if Source Value Entity is not Order Line Quantity.</description>
        <errorConditionFormula>ISBLANK( rstk__confcompvar_sourcegroup__c ) &amp;&amp; NOT( ISPICKVAL( rstk__confcompvar_source__c , &apos;Order Line Quantity&apos;) )</errorConditionFormula>
        <errorMessage>Source Group is Required if Source Value Entity is not Order Line Quantity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Source_Selection</fullName>
        <active>true</active>
        <description>Source Selection is Required if  Source Value Entity is not Order Line Quantity or Group and it should belong to selected source group.</description>
        <errorConditionFormula>(ISBLANK( rstk__confcompvar_sourcesel__c ) &amp;&amp; NOT( ISPICKVAL( rstk__confcompvar_source__c , &apos;Order Line Quantity&apos;) ) &amp;&amp; NOT( ISPICKVAL( rstk__confcompvar_source__c , &apos;Group&apos;) )) ||
(
   NOT( ISPICKVAL( rstk__confcompvar_source__c , &apos;Order Line Quantity&apos;) ) &amp;&amp; NOT( ISPICKVAL( rstk__confcompvar_source__c , &apos;Group&apos;)) &amp;&amp; rstk__confcompvar_sourcesel__r.rstk__confsel_confgroup__c &lt;&gt;  rstk__confcompvar_sourcegroup__c  
)</errorConditionFormula>
        <errorMessage>Source Selection is Required if  Source Value Entity is not Order Line Quantity or Group and it should belong to selected source group.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Source_Value_Entity</fullName>
        <active>true</active>
        <description>Source Value Entity is Required.</description>
        <errorConditionFormula>ISBLANK( TEXT(rstk__confcompvar_source__c) )</errorConditionFormula>
        <errorMessage>Source Value Entity is Required.</errorMessage>
    </validationRules>
</CustomObject>